--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,8 +91,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: Helvetica;
-  /* inherit; */
+  font: 'Helvetica', 'Arial', inherit;
   vertical-align: baseline;
 }
 
