--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,6 +93,8 @@ video {
   font-size: 100%;
   font: 'Helvetica', 'Arial', inherit;
   vertical-align: baseline;
+  letter-spacing: 0.05em;
+  /* Adjust spacing as needed */
 }
 
 article,
